# autobump

./: .gitignore  Cargo.toml  data.json
src/: app_state.rs  data_holders.rs  main.rs  utils.rs
