[package]
name = "autobump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = "0.33"
egui = "0.33"
image = "0.25"
mpsc = "0.3.0"
ocrs = "0.12.2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
rten = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tesseract = "0.15.2"
tokio = { version = "1.52.3", features = ["full"] }
